# spark-on-k8s

./: .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FUNDING.yml  README.md  SECURITY.md  TODO.md  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  versions.json
.github/workflows/: ci.yml  deploy-doc.yml  docker-release.yml  helm-release.yml  python-release.yml  release.yml  tests.yml
0.0.2/: 404.html  index.html  sitemap.xml
0.0.2/helm-chart/: index.html
0.0.2/reference/SUMMARY/: index.html
0.0.2/search/: search_index.json
0.0.2/user-guide/examples/: index.html
0.0.2/user-guide/getting_started/: index.html
0.0.2/user-guide/installation/: index.html
0.0.3/: 404.html  index.html  objects.inv  sitemap.xml
0.0.3/helm-chart/: index.html
0.0.3/reference/SUMMARY/: index.html
0.0.3/user-guide/examples/: index.html
0.0.3/user-guide/getting_started/: index.html
0.0.3/user-guide/installation/: index.html
0.0.4/: 404.html  index.html  sitemap.xml
0.0.4/helm-chart/: index.html
0.0.4/reference/SUMMARY/: index.html
0.0.4/user-guide/examples/: index.html
0.0.4/user-guide/getting_started/: index.html
0.0.4/user-guide/installation/: index.html
0.0.5/: 404.html  index.html  sitemap.xml  submit.py
0.0.5/helm-chart/: index.html
0.0.5/reference/SUMMARY/: index.html
0.0.5/user-guide/examples/: index.html
0.0.5/user-guide/getting_started/: index.html
0.0.5/user-guide/installation/: index.html
0.0.6/: 404.html  index.html  sitemap.xml
0.0.6/helm-chart/: index.html
0.0.6/reference/SUMMARY/: index.html
0.0.6/user-guide/examples/: index.html
0.0.6/user-guide/getting_started/: index.html
0.0.6/user-guide/installation/: index.html
0.0.7/: 404.html  index.html  sitemap.xml
0.0.7/helm-chart/: index.html
0.0.7/reference/SUMMARY/: index.html
0.0.7/user-guide/examples/: index.html
0.0.7/user-guide/installation/: index.html
0.0.8/: 404.html  index.html  sitemap.xml
0.0.8/helm-chart/: index.html
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/helm-chart/: index.html
0.10.0/: 404.html  index.html  sitemap.xml
0.10.0/helm-chart/: index.html
0.10.0/search/: search_index.json
0.10.1/: 404.html  index.html  objects.inv  sitemap.xml
0.10.1/helm-chart/: index.html
0.10.1/search/: search_index.json
0.11.0/: 404.html  index.html  sitemap.xml
0.11.0/helm-chart/: index.html
0.12.0/: 404.html  index.html  sitemap.xml
0.12.0/helm-chart/: index.html
0.12.1/: 404.html  index.html  sitemap.xml
0.12.1/helm-chart/: index.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/helm-chart/: index.html
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/helm-chart/: index.html
0.2.1/search/: search_index.json
0.2.2/: 404.html  index.html  sitemap.xml
0.2.2/helm-chart/: index.html
0.2.3/: 404.html  index.html  sitemap.xml
0.2.3/helm-chart/: index.html
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/helm-chart/: index.html
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/helm-chart/: index.html
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/helm-chart/: index.html
0.5.1/: 404.html  index.html  sitemap.xml
0.5.1/helm-chart/: index.html
0.5.2/: 404.html  index.html  sitemap.xml
0.5.2/helm-chart/: index.html
0.6.0/: 404.html  index.html  sitemap.xml
0.6.0/helm-chart/: index.html
0.7.0/: 404.html  index.html  sitemap.xml
0.7.0/helm-chart/: index.html
0.7.1/: 404.html  index.html  sitemap.xml
0.7.1/helm-chart/: index.html
0.7.1/search/: search_index.json
0.7.2/: 404.html  index.html  objects.inv  sitemap.xml
0.7.2/helm-chart/: index.html
0.7.2/search/: search_index.json
0.8.0/: 404.html  index.html  sitemap.xml
0.8.0/helm-chart/: index.html
0.8.0/search/: search_index.json
0.9.0/: 404.html  index.html  sitemap.xml
0.9.0/helm-chart/: index.html
0.9.0/search/: search_index.json
0.9.1/: 404.html  index.html  sitemap.xml
0.9.1/helm-chart/: index.html
0.9.1/search/: search_index.json
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
develop/: 404.html  index.html  sitemap.xml
develop/helm-chart/: index.html
docker/: Dockerfile  spark-history.Dockerfile
docker/scripts/: entrypoint.sh  generate-dependencies.sh
docs/: gen_ref_pages.py  index.md
docs/user-guide/: examples.md  getting_started.md  installation.md
examples/airflow/: iceberg_query.sql  query.sql  spark_dag.py  spark_sql_dag.py
examples/helm/: values.yaml
examples/java/: Dockerfile  submit.py  submit.sh
examples/python/: Dockerfile  job.py  submit.py  submit.sh
examples/secrets/: Dockerfile  README.md  job.py  submit.py  submit.sh
helm-chart/: index.html
reference/SUMMARY/: index.html
search/: search_index.json
spark_on_k8s/: __init__.py  client.py  job_waiter.py  kubernetes_client.py  setup_namespace.py  spark_client.py
spark_on_k8s/airflow/: operator_links.py  operators.py  provider_info.py  triggers.py
spark_on_k8s/api/: __init__.py  app.py  apps.py  config.py  configuration.py  jobs.py  kubernetes_async_client.py  main.py  ui.py  utils.py  webserver.py
spark_on_k8s/cli/: __init__.py  api.py  app.py  apps.py  namespace.py  options.py
spark_on_k8s/client/: generic.py
spark_on_k8s/k8s/: async_client.py  sync_client.py
spark_on_k8s/utils/: app_manager.py  app_waiter.py  async_app_manager.py  configuration.py  job_waiter.py  logging_mixin.py  setup_namespace.py  spark_app_status.py  types.py  warnings.py
tests/: conftest.py  test_spark_client.py
tests/airflow/: test_operator_links.py  test_operators.py
tests/api/: test_utils.py
tests/cli/: test_api.py  test_app.py  test_apps.py  test_namespace.py  test_options.py
tests/utils/: app_manager.py
user-guide/examples/: index.html
user-guide/getting_started/: index.html
user-guide/installation/: index.html
(+1278 files in other folders)
