[tool.poetry]
name = "spark-on-k8s"
version = "0.0.1"
description = "A Kubernetes Python client to submit Spark jobs on Kubernetes"
authors = ["Hussein Awala <hussein@awala.fr>"]
readme = "README.md"
packages = [{include = "spark_on_k8s"}]

[tool.poetry.dependencies]
python = "^3.8"
kubernetes = "^28.1.0"
kubernetes-asyncio = {version = "^28.2.1", optional = true}
fastapi = {version = "^0.109.0", optional = true}

[tool.poetry.dev-dependencies]
mock = "^5.1.0"
pytest = "^7.4.3"
pre-commit = "^3"
freezegun = "^1.4.0"

[tool.poetry.extras]
api = ["fastapi", "kubernetes-asyncio", "uvicorn", "httpx"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
line-length = 110
indent-width = 4
src = ["spark_on_k8s", "tests"]
fixable = ["ALL"]
ignore = ["E712"]
select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "F", # Pyflakes
    "B", # flake8-bugbear
    "PIE", # flake8-pie
    "C4", # flake8-comprehensions
    "I", # isort
    "UP", # pyupgrade,
    "TCH", # flake8-type-checking
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"
