[tool.poetry]
name = "spark-on-k8s"
version = "0.0.1"
description = "A Python package to submit and manage Apache Spark jobs on Kubernetes"
authors = ["Hussein Awala <hussein@awala.fr>"]
readme = "README.md"
packages = [{include = "spark_on_k8s"}]

[tool.poetry.dependencies]
python = "^3.8"
kubernetes = ">=22.0.0"
click = "^8.0.1"
fastapi = {version = "^0.109.0", optional = true}
kubernetes-asyncio = {version = ">=22.0.0", optional = true}
uvicorn = {version = "^0.26.0", optional = true}
httpx = {version = "^0.26.0", optional = true}
jinja2 = {version = "^3.1.3", optional = true}
apache-airflow = {version = ">=2.6.0", optional = true}
apache-airflow-providers-cncf-kubernetes = {version = ">=7.0.0", optional = true}
pendulum = {version = "<3.0.0", optional = true}

[tool.poetry.dev-dependencies]
mock = "^5.1.0"
pytest = "^7.4.3"
pre-commit = "^3"
freezegun = "^1.4.0"

[tool.poetry.extras]
api = ["fastapi", "kubernetes-asyncio", "uvicorn", "httpx", "jinja2"]
airflow = ["kubernetes-asyncio", "apache-airflow", "apache-airflow-providers-cncf-kubernetes", "pendulum"]

[tool.poetry.scripts]
spark-on-k8s = "spark_on_k8s:cli.main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
line-length = 110
indent-width = 4
src = ["spark_on_k8s", "tests"]
fixable = ["ALL"]
ignore = ["E712"]
select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "F", # Pyflakes
    "B", # flake8-bugbear
    "PIE", # flake8-pie
    "C4", # flake8-comprehensions
    "I", # isort
    "UP", # pyupgrade,
    "TCH", # flake8-type-checking
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"
